[fix] blue github icon on mobile.

--- a/src/assets/styles/layouts/_footer.css
+++ b/src/assets/styles/layouts/_footer.css
@@ -2,7 +2,11 @@
   background-color: $darkBlack;
   padding: 20px 0;
 
-  &__github-link:hover {
-    color: #999999;
+  &__github-link {
+    color: $mainGrey;
+
+    &:hover {
+      color: #999999;
+    }
   }
 }
